# bazel7_go_grpc

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  deps.bzl  go.mod  go.sum
client/: BUILD.bazel  main.go
proto/hello_world/: BUILD.bazel  hello_world.proto
server/: BUILD.bazel  main.go
