load("@rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/abitofhelp/client",
    deps = [
        "//proto/hello_world:hello_world_go_proto",
        #"//proto/hello_world:go_default_library"
    ],
)

go_binary(
    name = "greeter_client",
    embed = [":go_default_library"],
    goos = "linux",
    goarch = "amd64",
)
